
[TestProp/should_include_value_in_props_on_full_request - 1]
{
 "component": "TestComponent",
 "props": {
  "age": 30,
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_emit_merge_match-on_metadata_when_MergeKey_is_configured - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "posts.id",
  "notifications.uuid",
  "conversation.messages.id"
 ],
 "mergeProps": [
  "posts",
  "posts",
  "notifications",
  "conversation",
  "conversation.messages"
 ],
 "prependProps": [
  "notifications"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  },
  "notifications": [
   "one"
  ],
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_mergeProps_when_WithMerge_is_set - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "mergeable"
 ],
 "props": {
  "mergeable": {
   "key": "val"
  },
  "normal": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_respect_partial_blacklist_when_partial_component_matches - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_respect_partial_whitelist_when_partial_component_matches - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_populate_onceProps_when_WithOnce_is_set - 1]
{
 "component": "TestComponent",
 "onceProps": {
  "once_key": {
   "prop": "onceable"
  }
 },
 "props": {
  "onceable": "secret",
  "regular": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestProp/should_suppress_mergeProps_and_matchPropsOn_for_reset_keys_while_still_returning_the_value - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman",
  "posts": [
   "fresh"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---
